--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -1,7 +1,8 @@
 * { color: #fff; margin:0; padding:0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; line-height:18px; font-size: 13px;}
-html, body, #container { height: 100%; }
-body > #container { height: auto; min-height: 100%; }
-#content{padding-bottom: 36px;}
+html, body { height: 100%; }
+
+#content{padding-bottom: 36px; overflow: auto;}
+#container { min-height:100%;}
   
   /*Controls Section*/
   #controls-wrapper { margin:0 auto; height:62px; width:100%; bottom:0; left:0; z-index:4; background:url(img/nav-bg.png) repeat-x; position:fixed; }
@@ -34,8 +35,11 @@ h1{font-family: Georgia, "Times New Roman", Times, serif; font-size: 15px; color
 .button{ float: left; background: transparent url(images/bg_button.png) no-repeat scroll top right; color: red; display: block;  height: 22px; width: 64px; text-decoration: none; line-height: 26px; padding-top: 4px}
 .button:hover{background-position: 0 -26px;}
 
-
-#footer {background: #1b1513;clear: both;position: relative;z-index: 10;height: 36px;margin-top: -36px;}
+.clearfooter {
+height: 330px;
+clear: both;
+}
+#footer {background: #1b1513;clear: both;position: relative; z-index: 10;height: 36px; margin-top: -36px;}
 #footer .pad{padding: 7px 15px 0 0;}
 #footer .msg{float: right; text-align: right;font-family:Georgia, "Times New Roman", Times, serif; font-style:italic; font-size: 12px; color: #c8b8b0;}
 #footer .msg a{ font-family: Georgia, "Times New Roman", Times, serif; text-decoration:none; font-style:italic; font-size: 12px; }
