--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -31,9 +31,9 @@ h1{font-family: Georgia, "Times New Roman", Times, serif; font-size: 15px; color
 .requestInvite{background: #372c26; border-radius: 5px; margin: 20px 0 0 0; padding: 14px;}
 .requestInvite h1{font-size: 15px;color: #e4d9d5; margin: 0 0 6px 0;}
 
-.email{float: left; margin: 0 5px 0 0; width: 185px; height: 26px; color: #8f837a; background: url(images/bg_email.jpg) top left  repeat-x; font-size: 12px; padding-left: 4px; border: none;}
-.button{ float: left; background: transparent url(images/bg_button.png) no-repeat scroll top right; color: red; display: block;  height: 22px; width: 64px; text-decoration: none; line-height: 26px; padding-top: 4px}
-.button:hover{background-position: 0 -26px;}
+.email{float: left; margin: 0 5px 0 0; width: 185px; height: 26px; color: #8f837a; background: url(../images/bg_email.jpg) top left  repeat-x; font-size: 12px; padding-left: 4px; border: none;}
+.form-submit{ float: left; background: transparent url(../images/bg_button.png) no-repeat scroll top right;  display: block;  height: 26px; width: 64px; text-decoration: none}
+.form-submit:hover{background-position: 0 -26px;}
 
 .clearfooter {
 height: 330px;
