--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -21,11 +21,11 @@ html, body { height: 100%; }
       
     
 #box{ position: absolute; width: 360px; backgound-color: #1b1513;background:rgba(0,0,0,0.60); margin-top: 50px; }
-#box p{margin: 0 0 7px 0; color: #c8b8b0; }
+#box p{margin: 0 0 7px 0; color: #c8b8b0; font-style:italic;  }
 #boxContent {text-align: center; }
 #box p span{color: #fff; font-weight:bold;}
 #box .pad{padding: 35px;}
-h1{font-family: Georgia, "Times New Roman", Times, serif; font-size: 15px; color: #c8b8b0; font-style:italic; font-weight:normal; }   
+h1{font-family: Georgia, "Times New Roman", Times, serif; font-size: 14px; color: #c8b8b0; font-weight:normal; }   
 .logo{border-bottom: 1px solid #392d26; text-align:center; margin-bottom: 18px; padding-bottom: 18px;}
 .logo img{margin-bottom: 12px; }
 
