--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -1,50 +1,39 @@
-* { color: #fff; margin:0; padding:0; font-family: Georgia, "Times New Roman", Times, serif;; line-height:18px; font-size: 13px;}
-html, body { height: 100%; }
+* { margin:0; padding:0; border: none; } 
+p{color: #fff; font-family: helvetica, arial;}
+html, body, #wrap { height: 100%; }
+body > #wrap {height: auto; min-height: 100%;}
+#main { padding-bottom: 36px; }  /* must be same height as the footer */
+#footer {position: relative;margin-top: -36px; background:none repeat scroll 0 0 rgba(0, 0, 0, 0.6); height: 36px;clear:both;} 
 
-#content{padding-bottom: 36px; overflow: auto;}
-#container { min-height:100%;}
-  
-  /*Controls Section*/
-  #controls-wrapper { margin:0 auto; height:62px; width:100%; bottom:0; left:0; z-index:4; background:url(img/nav-bg.png) repeat-x; position:fixed; }
-    #controls { overflow:hidden; height:100%; text-align:left; z-index:5; padding:0 114px; /* Increase padding to give thumbnails room */ }
-      #slidecounter { float:left; color:#888; font:23px "Helvetica Neue", Helvetica, Arial, sans-serif; font-weight:bold; text-shadow:#000 0 -1px 0; margin:19px 10px 18px 20px; }
-      #slidecaption { overflow:hidden; float:left; color:#FFF; font:16px "Helvetica Neue", Helvetica, Arial, sans-serif; font-weight:bold; text-shadow:#000 0 2px 0; margin:23px 20px 23px 0; }
-      #navigation { float:right; margin:10px 20px 0 0; }
-  
-  /*Thumbnail Navigation*/  
-  #nextthumb,#prevthumb { z-index:6; display:none; position:fixed; bottom:12px; height:75px; width:100px; overflow:hidden; background:#ddd; border:2px solid #fff; -webkit-box-shadow:0 0 5px #000; }
-    #nextthumb { right:12px; }
-    #prevthumb { left:12px; }
-      #nextthumb img, #prevthumb img { width:150px; height:auto;  }
-      #nextthumb:active, #prevthumb:active { bottom:10px; }
-      #navigation > :hover,#nextthumb:hover, #prevthumb:hover { cursor:pointer; }
-      
-    
-#box{ position: absolute; width: 360px; backgound-color: #1b1513;background:rgba(0,0,0,0.60); margin-top: 50px; }
-#box p{margin: 0 0 7px 0; color: #c8b8b0; font-style:italic;  }
-#boxContent {text-align: center; }
-#box p span{color: #fff; font-weight:bold;}
-#box .pad{padding: 35px;}
-h1{font-family: Georgia, "Times New Roman", Times, serif; font-size: 15px; color: #c8b8b0; font-weight:normal; }   
-.logo{border-bottom: 1px solid #392d26; text-align:center; margin-bottom: 18px; padding-bottom: 18px;}
+
+
+/* content  */
+
+#box{ width: 360px; background:none repeat scroll 0 0 rgba(0, 0, 0, 0.6); margin-top: 40px; float: left;}
+#box .pad{padding: 30px;}
+#box p{margin: 0 0 12px 0; color: #c8b8b0; font-family:"museo-sans-1","museo-sans-2", Helvetica; font-size: 15px; line-height:21px;  }
+#box p span{color: #fff;}
+#box p.intro{font-size: 25px; line-height: 31px;}
+.logo{border-bottom: 1px solid #392d26; margin-top: 25px; margin-bottom: 16px; padding-bottom: 12px;}
 .logo img{margin-bottom: 12px; }
 
-.requestInvite{background: #372c26; border-radius: 5px; margin: 20px 0 0 0; padding: 14px;}
-.requestInvite h1{font-size: 15px;color: #e4d9d5; margin: 0 0 6px 0;}
+.email, .button{float: left;}
+.email{ margin: 0 5px 0 0; width: 185px; height: 26px; color: #8f837a; background: url(../images/bg_email.jpg) top left  repeat-x; font-size: 12px; padding-left: 4px; border: none;}
+.button{  background: url(images/bg_button.png) no-repeat scroll top right; color: #fff; display: block;  height: 26px; width: 64px; text-decoration: none; line-height: 26px; padding-top: 0px}
+.button:hover{background-position: 0 -26px;}
 
-.email{float: left; margin: 0 5px 0 0; width: 185px; height: 26px; color: #8f837a; background: url(../images/bg_email.jpg) top left  repeat-x; font-size: 12px; padding-left: 4px; border: none;}
-.form-submit{ float: left; background: transparent url(../images/bg_button.png) no-repeat scroll top right;  display: block;  height: 26px; width: 64px; text-decoration: none}
-.form-submit:hover{background-position: 0 -26px;}
 
-.clearfooter {
-height: 330px;
-clear: both;
-}
-#footer {background: #1b1513;clear: both;position: relative; z-index: 10;height: 36px; margin-top: -36px;}
-#footer .pad{padding: 7px 15px 0 0;}
+
+
+
+
+
+/* footer */
+
+#footer .pad{padding: 9px 15px 0 0;}
 #footer .msg{float: right; text-align: right;font-family:Georgia, "Times New Roman", Times, serif; font-style:italic; font-size: 12px; color: #c8b8b0;}
-#footer .msg a{ font-family: Georgia, "Times New Roman", Times, serif; text-decoration:none; font-style:italic; font-size: 12px; }
-#footer .link{color: #fff; padding: 0 16px; border-right: 1px solid #3c2f28; float: left; height: 20px; font-family:Georgia, "Times New Roman", Times, serif; text-decoration:none; font-style:italic; font-size: 12px; }
+#footer  a{font-family: Georgia, "Times New Roman", Times, serif; text-decoration:none; font-style:italic; font-size: 12px; color: #fff; }
+#footer .link{padding: 0 16px; border-right: 1px solid #3c2f28; float: left; height: 20px; }
 #footer .link:hover, #footer .msg a:hover{color: #c8b8b0;}
 #footer .social{float: left; width: 60px; padding-left: 16px;}
 #footer .social img{margin: 0 3px 0 0 ;}
