--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -1,4 +1,4 @@
-* { margin:0; padding:0; border: none; } 
+* {  margin:0; padding:0; border: none; font-family:"museo-sans-1","museo-sans-2", Helvetica; color: #fff;} 
 p{color: #fff; font-family: helvetica, arial;}
 html, body, #wrap { height: 100%; }
 body > #wrap {height: auto; min-height: 100%;}
@@ -9,30 +9,31 @@ input[type="button"], input[type="submit"], button {cursor:pointer;}
 
 /* content  */
 
-#box{ width: 360px; background: url(../images/bg.png); margin-top: 40px; float: left;}
-#box .pad{padding: 30px;}
-#box p{margin: 0 0 12px 0; color: #c8b8b0; font-family:"museo-sans-1","museo-sans-2", Helvetica; font-size: 15px; line-height:21px;  }
-#box p span{color: #fff;}
-#box p.intro{font-size: 25px; line-height: 31px;}
-.logo{border-bottom: 1px solid #392d26; margin-top: 25px; margin-bottom: 16px; padding-bottom: 12px;}
+#box{ width: 320px; margin: 6% 0 0 6%;; float: left;}
+#box .pad{padding: 30px;background: url(../images/bg.png);}
+#box p{margin: 0 0 13px 0; color: #c8b8b0;font-size: 15px; line-height:18px; font-family: Georgia, "Times New Roman", Times, serif; font-style:italic;position: relative; top: -4px;  }
+
+span{color: #fff; font-weight:500}
+h1{font-size: 25px; line-height: 31px; font-weight: 100; margin: 0 0 10px 0; color: #fff;}
+h2{font-size: 20px; line-height: 28px; font-weight: 300; margin: 0 0 0px 0;}
+.logo{border-bottom: 1px solid #392d26; margin-top: 0px; margin-bottom: 16px; padding-bottom: 12px;}
 .logo img{margin-bottom: 12px; }
+
 
 .form-text, .form-button, .form-text-readonly{float: left;}
 .form-text, .form-text-readonly{ margin: 0 5px 0 0; width: 185px; height: 26px; color: #8f837a; background: url(../images/bg_email.jpg) top left  repeat-x; font-size: 12px; padding-left: 4px; border: none;}
-.form-submit{  color: #fff;  font-weight: bold; height: 26px; width: 64px; padding: 3px 8px;}
+.form-submit{ background: url(../images/bg_button.png) no-repeat scroll top right; color: #fff; display: block;  height: 26px; width: 64px; text-decoration: none; line-height: 26px; padding-top: 0px}
 
-.form-submit {background-color:#c8b8b0;
-background:-moz-linear-gradient(100% 100% 90deg,#777,#c8b8b0);
-background:-webkit-gradient(linear,0% 0,0% 100%,from(#777),to(#c8b8b0));
-background-image:-o-linear-gradient(#777,#c8b8b0);
-filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#777',EndColorStr='#c8b8b0');-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorStr='#777', EndColorStr='#c8b8b0')";
-color:#fff;margin:0 1px 1px 0 }
 
 .form-submit{ 
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
-}    
+}
+
+#invite{padding: 12px;  }
+#invite.pad{background:#322b25; background: url("../images/bg_invite.png") repeat scroll 0% 0% transparent !important;}
+
      
 
 
@@ -49,4 +50,3 @@ color:#fff;margin:0 1px 1px 0 }
 #footer .link{padding: 0 16px; border-right: 1px solid #3c2f28; float: left; height: 20px; }
 #footer .link:hover, #footer .msg a:hover{color: #c8b8b0;}
 #footer .social{float: left; width: 60px; padding-left: 16px;}
-#footer .social img{margin: 0 3px 0 0 ;}
