--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -51,7 +51,7 @@ padding-left:25px;}
 
 #footer .pad{padding: 9px 15px 0 0;}
 #footer .msg{float: right; text-align: right;font-size: 12px; color: #c8b8b0;}
-#footer  a{text-decoration:none; font-weight: bold; font-size: 12px; color: #fff; }
-#footer .link{padding: 0 16px; font-weight: bold;  border-right: 1px solid #3c2f28; float: left; height: 20px; }
+#footer  a{text-decoration:none; font-weight: 500; font-size: 12px; color: #fff; }
+#footer .link{padding: 0 16px; font-weight: 500;  border-right: 1px solid #3c2f28; float: left; height: 20px; }
 #footer .link:hover, #footer .msg a:hover{color: #c8b8b0;}
 #footer .social{float: left; width: 60px; padding-left: 16px;}
