--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -23,7 +23,10 @@ h2{font-size: 20px; line-height: 28px; font-weight: 300; margin: 0 0 0px 0;}
 border:0px solid red !important;
 }
 
-.form-text, .form-button, .form-text-readonly{float: left;}
+label { color:black; }
+.form-item .description {color: #8f837a }
+
+#fm-invite-request-form .form-text, #fm-invite-request-form .form-button, #fm-invite-request-form .form-text-readonly{float: left;}
 .form-text, .form-text-readonly{ margin: 0 5px 0 0; width: 185px; height: 26px; color: #8f837a; background: url(../images/bg_email.jpg) top left  repeat-x; font-size: 12px; padding-left: 4px; border: none;}
 .form-submit{ background: url(../images/bg_button.png) no-repeat scroll top right; color: #fff; display: block;  height: 26px; width: 64px; text-decoration: none; line-height: 26px; padding-top: 0px}
 .form-submit:hover{background-position: 0 -26px;}
