--- a/themes/fadmashion_commerce/css/colorbox.css
+++ b/themes/fadmashion_commerce/css/colorbox.css
@@ -30,8 +30,8 @@
     #cboxMiddleRight{width:25px; background:url(../images/colorbox/border2.png) repeat-y -25px 0;}
     #cboxContent{background:#fff; overflow:hidden;}
         #cboxError{padding:50px; border:1px solid #ccc;}
-        #cboxLoadedContent{margin-top:25px;}
-        #cboxTitle{position:absolute; color:#000; font-weight: bold; top:0px; left:0; text-align:left; width:100%; color:#999;}
+        #cboxLoadedContent{margin-top:25px; padding: 20px;}
+        #cboxTitle{position:absolute; color:#000; font-weight: normal; font-size: 16px; padding: 20px; top:0px; left:0; text-align:left; width:100%;}
         #cboxCurrent{position:absolute; bottom:0px; left:100px; color:#999;}
         #cboxSlideshow{position:absolute; bottom:0px; right:42px; color:#444;}
         #cboxPrevious{position:absolute; bottom:0px; left:0; color:#444;}
