--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -23,7 +23,7 @@ h2{font-size: 20px; line-height: 28px; font-weight: 300; margin: 0 0 0px 0;}
 border:0px solid red !important;
 }
 
-label { color:black;font-weight: normal !important; margin-bottom: 5px;}
+label { font-size: 12px; color:black;font-weight: normal !important; margin-bottom: 5px;}
 .form-item .description {color: #8f837a }
 
 #fm-invite-request-form .form-text, #fm-invite-request-form .form-button, #fm-invite-request-form .form-text-readonly{float: left;}
@@ -36,6 +36,11 @@ label { color:black;font-weight: normal !important; margin-bottom: 5px;}
 #message_box .error { -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; width:180px; color: #fff; border: 0px solid #000; }
 
 label.invalid { margin-top: 6px; font-size: 11px; -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; color: #fff; border: 0px solid #000; }
+
+#fm-invite-send-email-form .form-text, #fm-invite-send-email-form .form-textarea {
+border:1px solid #DDDDDD;
+width:274px;
+}
 
 
 #invite{padding: 12px;  }
