--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -39,6 +39,7 @@ label.invalid { margin-top: 6px; font-size: 11px; -moz-border-radius:3px 3px 3px
 #fm-invite-send-email-form .form-text, #fm-invite-send-email-form .form-textarea {
 border:1px solid #DDDDDD;
 width:274px;
+background-image:none;
 }
 
 
