--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -26,7 +26,7 @@ label { font-size: 12px; color:black;font-weight: normal !important; margin-bott
 .form-item .description {color: #8f837a }
 
 #fm-invite-request-form .form-text, #fm-invite-request-form .form-button, #fm-invite-request-form .form-text-readonly{float: left;}
-.form-textarea, .form-text, .form-text-readonly{ margin: 0 5px 0 0;  color: #8f837a; font-size: 12px; }
+.form-textarea, .form-text, .form-text-readonly{ margin: 0 5px 0 0;  color: #72655c; font-size: 12px; }
 .form-text, .form-text-readonly { width: 185px; height: 26px; background: url(../images/bg_email.jpg) top left  repeat-x; padding-left: 4px;  border: none;}
 .form-submit{  background: url(../images/bg_button.png) no-repeat scroll top right; color: #fff; display: block;  height: 26px; width: 64px; text-decoration: none; line-height: 26px; padding-top: 0px}
 .form-submit:hover{background-position: 0 -26px;}
