--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -75,7 +75,7 @@ padding-left:25px;}
 .signupBox p.value { color:#D7CBC2; font-weight:700; margin-top:14px; }
 .social {float:left;width:111px;}
 .socialIcon {margin:0 5px 0 0;}
-.link {float:left;width:350px;}
+.rewards_link {float:left;width:350px;}
 
 
 /* footer */
