--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -76,7 +76,7 @@ h2.socialSubtitle  {text-align: center; color:#8A7D71;font-family:Georgia,"Times
 .signupBox p.value { color:#D7CBC2; font-weight:700; margin-top:14px; }
 .social {float:left;width:111px;}
 .socialIcon {margin:0 5px 0 0;}
-.rewards_link {float:left;width:350px;}
+.rewards_link {float:left;}
 
 
 /* footer */
