--- a/themes/fadmashion_commerce/css/colorbox.css
+++ b/themes/fadmashion_commerce/css/colorbox.css
@@ -31,7 +31,7 @@
     #cboxContent{background:#fff; overflow:hidden;}
         #cboxError{padding:50px; border:1px solid #ccc;}
         #cboxLoadedContent{margin-top:25px; padding: 20px;}
-        #cboxTitle{position:absolute; color:#1D1C1A; font-weight: normal; font-size: 22px; padding: 20px 0; top:0px; left:0; text-align:center; width:100%;}
+        #cboxTitle{position:absolute; color:#1D1C1A; font-weight: 100; font-size: 22px; padding: 20px 0; top:0px; left:0; text-align:center; width:100%;}
         #cboxCurrent{position:absolute; bottom:0px; left:100px; color:#999;}
         #cboxSlideshow{position:absolute; bottom:0px; right:42px; color:#444;}
         #cboxPrevious{position:absolute; bottom:0px; left:0; color:#444;}
