--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -31,7 +31,9 @@ label { font-size: 12px; color:black;font-weight: normal !important; margin-bott
 .form-textarea, .form-text, .form-text-readonly{ margin: 0 5px 0 0;  color: #72655c; font-size: 12px; }
 .form-text, .form-text-readonly { width: 185px; height: 26px; background: url(../images/bg_email.jpg) top left  repeat-x; padding-left: 4px;  border: none;}
 .form-submit{  background: url(../images/bg_button.png) no-repeat scroll top right; color: #fff; display: block;  height: 26px; width: 64px; text-decoration: none; line-height: 26px; padding-top: 0px}
-.form-submit:hover{background-position: 0 -26px;}
+.form-submit:hover{background: url(../images/bg_button_red.png) no-repeat scroll top right;}
+
+#fm-invite-request-form .form-submit {}
 
 #message_box { width: 220px; color: #fff; font-size: 11px; background: url(../images/arrow_error.png) 8px 6px no-repeat; padding-top: 6px; margin-top: 3px; }
 #message_box .error { -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; width:180px; color: #fff; border: 0px solid #000; }
@@ -45,7 +47,7 @@ background-image:none;
 }
 
 
-#invite{padding: 12px;  }
+#invite{padding: 12px; position: relative; left: -8px; width: 276px;}
 #invite.pad{background:#322b25; background: url("../images/bg_invite.png") repeat scroll 0% 0% transparent !important;}
 
 #twitter_link { background:url("../images/icon_twitter_brown.png") no-repeat scroll 0 0 transparent;
