--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -34,6 +34,7 @@ label { font-size: 12px; color:black;font-weight: normal !important; margin-bott
 .form-submit:hover{background-position: 0 -26px;}
 
 #fm-invite-request-form .form-submit {background: url(../images/bg_button_red.png) no-repeat scroll top right;}
+#fm-invite-request-form .form-submit:hover {background-position: 0 -26px;}
 
 #message_box { width: 220px; color: #fff; font-size: 11px; background: url(../images/arrow_error.png) 8px 6px no-repeat; padding-top: 6px; margin-top: 3px; }
 #message_box .error { -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; width:180px; color: #fff; border: 0px solid #000; }
