add rounded corners

--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -51,7 +51,7 @@ background-image:none;
 #invite{padding: 12px;}
 #invite.pad{background:#322b25; background: url("../images/bg_invite.png") repeat scroll 0% 0% transparent !important;}
 
-.extend{position: relative; left: -8px; width: 276px;}
+.extend{position: relative; left: -8px; width: 276px; border-radius: 5px;}
 .extend .content {left: 8px; position: relative;}
 
 #twitter_link { background:url("../images/icon_twitter_brown.png") no-repeat scroll 0 0 transparent;
