--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -94,7 +94,7 @@ h2.socialSubtitle  {text-align: center; color:#8A7D71;font-family:Georgia,"Times
 /* footer */
 
 #footer .pad{padding: 9px 15px 0 0;}
-#footer .msg{float: right; text-align: right;font-size: 12px; color: #c8b8b0;}
+#footer .msg{font-style: normal; font-family: 'museo-sans-1','museo-sans-2',Helvetica; margin: 0px; float: right; text-align: right;font-size: 12px; color: #c8b8b0;}
 #footer  a{text-decoration:none; font-weight: 500; font-size: 12px; color: #fff; }
 #footer .link{padding: 0 16px; font-weight: 500;  border-right: 1px solid #3c2f28; float: left; height: 20px; }
 #footer .link:hover, #footer .msg a:hover{color: #c8b8b0;}
