--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -139,6 +139,43 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 
 #facebook{padding: 12px; width: 184px; margin: 15px 0; background: #f3f5f9;border-radius:4px; -webkit-border-radius: 4px; -moz-border-radius: 4px;}
 
+/********* Overlays ***************/
+
+/* Preview */
+#dealPreview{ float: left; text-align:center;}
+#dealPreview h1{font-size: 26px;margin: 0 0 4px 0;}
+#dealPreview h2 {color: #92857a; font-size: 14px;}
+
+
+.dealFrame{width: 245px; border: 1px solid #dedcd4; float: left; margin: 13px;border-radius:5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; height: 475px;}
+.dealFrame .pricing{margin: 15px 0; font-size: 11px; font-weight: 700; float: left;  width: 245px; height: 30px; font-family: luc }
+.dealFrame .pricing div{float: left; width: 81px; text-align:center; display: inline}
+.dealFrame .pricing .original{color: #998e82;background:  url(../images/dotted_vertical.png) top right repeat-y;}
+.dealFrame .pricing .original h3{ text-decoration: line-through;}
+.dealFrame .pricing .savings{ color: #b83838;background:  url(../images/dotted_vertical.png) top left repeat-y;}
+.dealFrame .pricing .savings h3{font-size: 26px;margin-top: 5px;}
+.dealFrame .pricing h3{font-size: 18px; font-weight:700; padding-top: 6px; margin: 0;}
+.dealFrame .buttons{float: left; text-align:center; width: 245px; display:}
+.dealFrame .button {width: 80px; padding: 5px 15px; text-align:center; margin: 0; display:inline;}
+
+.dealFrame .itemThumb{ margin: 6px 0 14px 0; text-align:center; border: 1px solid #eae7e5;}
+#dealPreview .dealFrame h1.itemName{font-size: 14px; margin-bottom: 4px;}
+#dealPreview .dealFrame h2, #dealPreview .dealFrame h2 a{font-size: 12px; margin-bottom: 8px;}
+
+.dealHeader{height: 16px; font-size: 14px; background: #7a6857; color: #fff; padding: 8px 0;border-top-left-radius:5px; -webkit-border-top-left-radius: 5px; -moz-border-top-left-radius: 5px;border-top-right-radius:5px; -webkit-border-top-right-radius: 5px; -moz-border-top-right-radius: 5px;}
+.onSale .dealHeader{background: #a22b24;font-size: 18px; line-height: 18px;}
+.onSale{border-color:#a22b24; }
+.ended{color: #cbbdb0;}
+
+.social{ padding: 50px 0; border-bottom: 1px solid #eae7e5; text-align:center; font-size: 14px; line-height:19px; margin: 0 20px; color: #92857a; }
+#dealPreview .dealFrame .social h1{font-size: 22px; margin: 10px 0;color: #322f2c;}
+.social a, .weekButton a{font-family:"museo-sans-1","museo-sans-2", Helvetica; font-size: 14px; font-style: normal;}
+.weekButton a{color: #92857a;92857a}
+.social img{display: block; margin: 0 auto;}
+.weekButton{background: url(../images/bg_arrow_large.jpg) top right no-repeat; height: 30px;width: 100px; font-size: 15px; margin: 0 auto; padding-right: 28px; font-style:normal; color: #92857a; margin-top: 84px; }
+.weekButton:hover{background-position: bottom right;}
+.check{margin-right: 5px;}
+
 
 /* Footer */
 #footer{background:#f9f8f6 url(../images/bg_footer.jpg) top left repeat-x; clear: both;margin-top: 30px;}
