--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -96,7 +96,7 @@ padding:6px 30px;
 .quicktabs_wrapper{background: #f0eeea; padding: 4px; margin: 15px 0;}
 ul.quicktabs_tabs, .quicktabs_tabs li{float: left; list-style-type:none;}
 .quicktabs_tabs li.active{background: #fff;}
-.quicktabs_main{min-height: 290px; background: #fff; display: block; clear: both; padding: 10px; }
+.quicktabs_main{background: #fff; display: block; clear: both; padding: 10px; }
 
 #quicktabs-fm_product_details ul{width: 330px;}
 #quicktabs-fm_product_details li{min-width: 80px; padding: 4px; text-align:center;}
