--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -56,7 +56,8 @@ color:#fff}
 
 .sidebarRight .sidebar{padding-left: 25px;}
 .sidebarRight .info{   }
-.info p{width: 310px; margin-top: 5px; margin-bottom: 5px;}
+.info p, .info ul{width: 310px; margin-top: 5px; margin-bottom: 5px;}
+.info ul { list-style-type: disc;}
 
 /* Deals */
 .photos{padding-bottom: 100px;}
