--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -91,7 +91,7 @@ a.more{background: url(../images/arrow_blue_down.jpg) center right no-repeat; pa
 .itemOptions .product_button_text{margin-top: 10px; font-family:Georgia, "Times New Roman", Times, serif; font-style:italic; text-align: center;}
 
 .itemOptions .options{text-align: left;}
-.itemOptions .form-submit, .button a {
+.itemOptions .form-submit, .itemOptions  .button a {
 font-size:15px;
 font-weight:300;
 margin:0;
